# gpu-mandelbrot

./: Cargo.toml
src/: lib.rs  main.rs  num.rs  shader.wgsl
