[package]
name = "gpu-mandelbrot"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
wgpu = "0.10.2"
winit = { version = "0.25.0", features = ["web-sys"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen-futures = "0.4.26"
web-sys = { version = "0.3.51", features = ["Document", "Element", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9.0"
pollster = "0.2.4"

